@@ -95,10 +95,11 @@ def latest_db(db):
         
 # KODI-RD-IL - Force addon updates FAST method
 def forceUpdate():
-    xbmc.executebuiltin('UpdateAddonRepos()')
-    xbmc.executebuiltin('UpdateLocalAddons()')
+    xbmc.sleep(4000)
     logging.log_notify(CONFIG.ADDONTITLE,
                        '[COLOR {0}]מחפש עדכוני הרחבות...[/COLOR]'.format(CONFIG.COLOR2))
+    xbmc.executebuiltin('UpdateAddonRepos()')
+    xbmc.executebuiltin('UpdateLocalAddons()')
 ############################################################################
 
 def force_check_updates(auto=False, over=False):
